ALF-1236: Личные настройки пользователя для поручений
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3222 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-errands/repo/src/main/config/messages/lecm-errands-model.properties
+++ b/lecm-errands/repo/src/main/config/messages/lecm-errands-model.properties
@@ -51,3 +51,13 @@ lecm-errands_model.type.lecm-errands_settings.title=Errand settings
 lecm-errands_model.type.lecm-errands_settings.description=Errand settings
 lecm-errands_model.property.lecm-errands_settings-mode-choosing-executors.title=Mode choosing executors
 lecm-errands_model.property.lecm-errands_settings-mode-choosing-executors.description=Mode choosing executors
+
+
+lecm-errands_model.type.lecm-errands_user-settings.title=Errand user settings
+lecm-errands_model.type.lecm-errands_user-settings.description=Errand user settings
+lecm-errands_model.property.lecm-errands_user-settings-without-initiator-approval.title=Without initiator approval
+lecm-errands_model.property.lecm-errands_user-settings-without-initiator-approval.description=Without initiator approval
+lecm-errands_model.association.lecm-errands_user-settings-default-initiator-assoc.title=Default initiator
+lecm-errands_model.association.lecm-errands_user-settings-default-initiator-assoc.description=Default initiator
+lecm-errands_model.association.lecm-errands_user-settings-default-subject-assoc.title=Default subject
+lecm-errands_model.association.lecm-errands_user-settings-default-subject-assoc.description=Default subject
