[+] кнопка "Деплой" для Редактора Отчетов
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3226 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-reports-editor/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/reports-editor/menu/reports-editor.menu.get.properties
+++ b/lecm-reports-editor/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/reports-editor/menu/reports-editor.menu.get.properties
@@ -9,3 +9,4 @@ lecm.reports-editor.reportTypes.btn=Report Types
 lecm.reports-editor.reportProviders.btn=Report Providers
 lecm.reports-editor.reportColumnTypes.btn=Report Column Types
 lecm.reports-editor.reportParameterTypes.btn=Report Parameter Types
+lecm.reports-editor.deploy.btn=Deploy Report
