ALF-1235: Добавлен контрол для выбора инициаторов поручений согласно глобальных настроек
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3227 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-errands/repo/pom.xml
+++ b/lecm-errands/repo/pom.xml
@@ -73,6 +73,11 @@
 		    <artifactId>documents-repo-api</artifactId>
 		    <version>${project.version}</version>
 	    </dependency>
+	    <dependency>
+		    <groupId>ru.it.lecm.orgstructure</groupId>
+		    <artifactId>orgstructure-repo-api</artifactId>
+		    <version>${project.version}</version>
+	    </dependency>
         <!-- Don't add here amp dependencies as it will break amp packaging -->
     </dependencies>
     <!--
