--- a/lecm-errands/repo/pom.xml
+++ b/lecm-errands/repo/pom.xml
@@ -73,11 +73,17 @@
 		    <artifactId>documents-repo-api</artifactId>
 		    <version>${project.version}</version>
 	    </dependency>
-	    <dependency>
-		    <groupId>ru.it.lecm.orgstructure</groupId>
-		    <artifactId>orgstructure-repo-api</artifactId>
-		    <version>${project.version}</version>
-	    </dependency>
+        <dependency>
+            <groupId>ru.it.lecm.orgstructure</groupId>
+            <artifactId>orgstructure-repo-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>ru.it.lecm.dictionary</groupId>
+            <artifactId>dictionary-repo-api</artifactId>
+            <version>${project.version}</version>
+            <scope>provided</scope>
+        </dependency>
         <!-- Don't add here amp dependencies as it will break amp packaging -->
     </dependencies>
     <!--
