убраны лишние сообщения в логе сборки
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3248 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/pom.xml
+++ b/pom.xml
@@ -394,6 +394,7 @@
                         <encoding>UTF-8</encoding>
                         <linebreakpos>500</linebreakpos>
                         <webappDirectory>${project.build.directory}/${project.build.finalName}/web</webappDirectory>
+                        <jswarn>false</jswarn>
                         <excludes>
                             <exclude>**/alfresco/site-webscripts/**/*.js</exclude>
                             <exclude>**/alfresco/templates/**/*.js</exclude>
