ALF-1214 : 5.1 Создание черновика поручения; ALF-1217 : 5.3 Создать короткое поручение
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3254 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-errands/share/src/main/resources/alfresco/web-extension/ru/it/lecm/errands/form.properties
+++ b/lecm-errands/share/src/main/resources/alfresco/web-extension/ru/it/lecm/errands/form.properties
@@ -12,3 +12,6 @@ tool.errands-settings.description=Errands settings
 
 label.mode-choosing.unit=In organization unit
 label.mode-choosing.organization=In organization
+
+label.hide-details=Hide details
+label.show-details=Show details
