ALF-1229: Добавление поручений - только drag-and-drop
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3264 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-errands/repo/src/main/config/messages/lecm-errands-model.properties
+++ b/lecm-errands/repo/src/main/config/messages/lecm-errands-model.properties
@@ -45,6 +45,8 @@ lecm-errands_model.association.lecm-errands_subject-assoc.title=Subject
 lecm-errands_model.association.lecm-errands_subject-assoc.description=Subject
 lecm-errands_model.association.lecm-errands_execution-links-assoc.title=Links
 lecm-errands_model.association.lecm-errands_execution-links-assoc.description=Links
+lecm-errands_model.association.lecm-errands_attachments-temp-assoc.title=Attachments
+lecm-errands_model.association.lecm-errands_attachments-temp-assoc.description=Attachments
 
 
 lecm-errands_model.type.lecm-errands_settings.title=Errand settings
