--- a/lecm-base/share/src/main/resources/alfresco/web-extension/ru/it/lecm/base/base-share.properties
+++ b/lecm-base/share/src/main/resources/alfresco/web-extension/ru/it/lecm/base/base-share.properties
@@ -34,3 +34,4 @@ form.control.date-picker.entry.time.format=HH:mm
 form.control.date-picker.display.time.format=HH:MM (24 Hour)
 
 tool.group.lecm-settings=Logic ECM settings
+label.add-file=Add file
