ALF-1229: Добавление поручений - рефакторинг
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3267 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-errands/share/src/main/resources/alfresco/web-extension/ru/it/lecm/errands/form.properties
+++ b/lecm-errands/share/src/main/resources/alfresco/web-extension/ru/it/lecm/errands/form.properties
@@ -13,7 +13,7 @@ tool.errands-settings.description=Errands settings
 label.mode-choosing.unit=In organization unit
 label.mode-choosing.organization=In organization
 
-label.attachments=Attachments
+label.errands.attachments=Errands > Attachments
 
 label.hide-details=Hide details
 label.show-details=Show details
