Добавлен сервис сканирования
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3271 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,7 @@
 		<module>lecm-contractors</module>
 		<module>lecm-contracts-fake</module>
 		<module>lecm-approval</module>
+                <module>lecm-scaner</module>
         <module>lecm-reports-editor</module>
         <module>lecm-errands</module>
 	</modules>
