--- a/server/share/pom.xml
+++ b/server/share/pom.xml
@@ -228,6 +228,13 @@
             <scope>runtime</scope>
             <type>amp</type>
         </dependency>
+	 <dependency>
+	  <groupId>ru.it.lecm.scaner</groupId>
+	  <artifactId>scaner-share</artifactId>
+	  <version>${platform.version}</version>
+          <type>amp</type>
+            <scope>runtime</scope>
+	 </dependency>
 	</dependencies>
 
 	<build>
