--- a/lecm-business-journal/repo/src/main/config/log4j.properties
+++ b/lecm-business-journal/repo/src/main/config/log4j.properties
@@ -38,4 +38,4 @@
    #    
    #-----------------------------------------------------------------------
   
-   log4j.logger.org.alfresco.demoamp.DemoComponent=${module.log.level}
+log4j.logger.ru.it.lecm.businessjournal=${module.log.level}
