--- a/lecm-jasperreports-forms/repo/src/main/config/log4j.properties
+++ b/lecm-jasperreports-forms/repo/src/main/config/log4j.properties
@@ -38,4 +38,6 @@
    #    
    #-----------------------------------------------------------------------
   
-   log4j.logger.org.alfresco.demoamp.DemoComponent=${module.log.level}
+log4j.logger.ru.it.lecm.forms=${module.log.level}
+log4j.logger.ru.it.lecm.reports=${module.log.level}
+log4j.logger.ru.it.lecm.utils=${module.log.level}
