--- a/lecm-security/repo/src/main/config/log4j.properties
+++ b/lecm-security/repo/src/main/config/log4j.properties
@@ -38,4 +38,4 @@
    #
    #-----------------------------------------------------------------------
 
-   log4j.logger.ru.it.lecm.delegation=${module.log.level}
+   log4j.logger.ru.it.lecm.security=${module.log.level}
