ALF-1229: Добавление контента - распределение по категориям вложений в зависимости от роли
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3283 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-errands/repo/pom.xml
+++ b/lecm-errands/repo/pom.xml
@@ -84,6 +84,11 @@
             <version>${project.version}</version>
             <scope>provided</scope>
         </dependency>
+	    <dependency>
+		    <groupId>ru.it.lecm.security</groupId>
+		    <artifactId>lecm-security-api</artifactId>
+		    <version>${project.version}</version>
+	    </dependency>
         <!-- Don't add here amp dependencies as it will break amp packaging -->
     </dependencies>
     <!--
