--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,7 @@
                 <module>lecm-scaner</module>
         <module>lecm-reports-editor</module>
         <module>lecm-errands</module>
+		<module>lecm-semantic-assist</module>
 	</modules>
     <scm>
         <connection>scm:svn:https://svn.datateh.ru/alfrescoecm/Business Platform/trunk/</connection>
