--- a/server/alfresco/pom.xml
+++ b/server/alfresco/pom.xml
@@ -298,6 +298,13 @@
           <type>amp</type>
             <scope>runtime</scope>
 	 </dependency>
+		<dependency>
+            <groupId>ru.it.lecm.semantic</groupId>
+            <artifactId>semantic-assist-repo</artifactId>
+            <version>${platform.version}</version>
+            <scope>runtime</scope>
+            <type>amp</type>
+        </dependency>
 	</dependencies>
 
 	<build>
