--- a/server/share/pom.xml
+++ b/server/share/pom.xml
@@ -235,6 +235,13 @@
           <type>amp</type>
             <scope>runtime</scope>
 	 </dependency>
+		<dependency>
+            <groupId>ru.it.lecm.semantic</groupId>
+            <artifactId>semantic-assist-share</artifactId>
+            <version>${platform.version}</version>
+            <scope>runtime</scope>
+            <type>amp</type>
+        </dependency>
 	</dependencies>
 
 	<build>
@@ -386,5 +393,5 @@
 	        </dependencies>
 		</profile>
     </profiles>
-    
+
 </project>
