корректная версия зависимостей
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3292 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-scaner/share/pom.xml
+++ b/lecm-scaner/share/pom.xml
@@ -36,7 +36,7 @@
 	 <dependency>
 	  <groupId>ru.it.lecm.base</groupId>
 	  <artifactId>base-repo-api</artifactId>
-	  <version>0.1.0</version>
+	  <version>${platform.version}</version>
 	  <type>jar</type>
 	 </dependency>
 	</dependencies>
