--- a/lecm-documents/repo/src/main/config/messages/lecm-document-aspects-model.properties
+++ b/lecm-documents/repo/src/main/config/messages/lecm-document-aspects-model.properties
@@ -2,3 +2,5 @@ lecm-document-aspects_aspects.property.lecm-document-aspects_rating.title=Rating
 lecm-document-aspects_aspects.property.lecm-document-aspects_rating.description=Rating
 lecm-document-aspects_aspects.property.lecm-document-aspects_rated-persons-count.title=Rated persons count
 lecm-document-aspects_aspects.property.lecm-document-aspects_rated-persons-count.description=Rated persons count
+
+lecm-document-aspects_aspects.association.lecm-document-aspects_parent-document-assoc.title=Parent document
