логгер по-умолчанию INFO
включение логерра в DEBUG через профиль logger-all-debug

git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/branches/0.5@3303 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,9 @@
         <platform.version>${project.version}</platform.version>
         <buildNumber>1</buildNumber>
         <client.debug>false</client.debug>
+
+        <module.log.level>info</module.log.level>
+        <repo.jscript.ScriptLogger>info</repo.jscript.ScriptLogger>
     </properties>
 
 	<modules>
@@ -484,6 +487,13 @@
             <modules>
                 <module>lecm-im</module>
             </modules>
+        </profile>
+        <profile>
+            <id>logger-all-debug</id>
+            <properties>
+                <module.log.level>debug</module.log.level>
+                <repo.jscript.ScriptLogger>debug</repo.jscript.ScriptLogger>
+            </properties>
         </profile>
     </profiles>
 
