[~] доработки и переработки Редактора отчета - поправлен функционал API [~] прописан логгер в share
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3305 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-reports-editor/share/pom.xml
+++ b/lecm-reports-editor/share/pom.xml
@@ -45,6 +45,10 @@
             <artifactId>lecm-reports-api</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
 		<!-- Don't add here amp dependencies as it will break amp packaging -->
 	</dependencies>
 
