[~] прописан логгер в share
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3310 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-reports-editor/share/pom.xml
+++ b/lecm-reports-editor/share/pom.xml
@@ -45,6 +45,7 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
+            <scope>compile</scope>
         </dependency>
 		<!-- Don't add here amp dependencies as it will break amp packaging -->
 	</dependencies>
