--- a/lecm-user-profile/share/src/main/resources/alfresco/web-extension/ru/it/lecm/user-profile/form.properties
+++ b/lecm-user-profile/share/src/main/resources/alfresco/web-extension/ru/it/lecm/user-profile/form.properties
@@ -4,8 +4,10 @@ page.user-profile.filteredLabel=(content filtered)
 label.user-profile.menu.absence.btn=Manage my future absence
 label.user-profile.menu.delegation.btn=Manage my delegayion settings
 label.user-profile.menu.errands-settings.btn=Errands settings
+label.user-profile.menu.notifications-settings.btn=Notifications settings
 header.user-profile.label=Logic ECM: My profile
 header.user-profile.description=Manage your personal settings
 page.user-profile.delegation.title=My profile > Delegation
 page.user-profile.instant-absence.title=My profile > Out of office
 page.user-profile.errands-settings.title=My profile > Errands settings
+page.user-profile.notifications-settings.title=My profile > Notifications settings
