--- a/lecm-jasperreports-forms/repo/pom.xml
+++ b/lecm-jasperreports-forms/repo/pom.xml
@@ -198,6 +198,11 @@
 					<exclude>**README-*</exclude>
 				</excludes>
 			</resource>
+            <resource>
+                <filtering>true</filtering>
+                <directory>src/main/config/reportdefinitions</directory>
+                <targetPath>reportdefinitions</targetPath>
+            </resource>
 		</resources>
 	</build>
 </project>
