[+] ALF-1117     Генерация web-формы задания параметров отчета
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3345 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/resources/alfresco/web-extension/ru/it/lecm/documents/form.properties
+++ b/lecm-documents/share/src/main/resources/alfresco/web-extension/ru/it/lecm/documents/form.properties
@@ -49,3 +49,4 @@ page.reports-list=Reports List
 documents.report.success=Report formed succesfully
 documents.report.failure=Report failed
 
+document.report.default.title=Set report parameters
