[fix] опечатка в properties
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3371 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/resources/alfresco/web-extension/ru/it/lecm/documents/form.properties
+++ b/lecm-documents/share/src/main/resources/alfresco/web-extension/ru/it/lecm/documents/form.properties
@@ -37,8 +37,8 @@ document.main.form.edit=Changing attributes of a document
 page.lecm.documents-journal.title=Documents Journal
 page.lecm.documents-journal.description=Documents Journal
 
-header.delegation.label=Document Journal
-header.delegation.description=Document Journal
+header.doc-journal.label=Document Journal
+header.doc-journal.description=Document Journal
 
 form.logicecm.view=Viewing History
 
