--- a/lecm-contracts/repo/src/main/config/messages/lecm-contracts-dictionaries-model.properties
+++ b/lecm-contracts/repo/src/main/config/messages/lecm-contracts-dictionaries-model.properties
@@ -4,3 +4,5 @@ lecm-contract-dic_model.property.lecm-contract-dic_contract-type-description.tit
 lecm-contract-dic_model.property.lecm-contract-dic_contract-documents-type-code.title=Code
 lecm-contract-dic_model.property.lecm-contract-dic_delete-reason-code.title=Code
 lecm-contract-dic_model.property.lecm-contract-dic_reference-data-link.title=Link
+
+lecm-contract-dic_model.type.lecm-contract-dic_contract-documents-type.title=Contract Document Type
