ALF-1264 Дашлет «Мои поручения» [+] подправил вебскрипт [~] подправил названия
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3404 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-errands/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/errands/dashlets/my-errands/my-errands.get.properties
+++ b/lecm-errands/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/errands/dashlets/my-errands/my-errands.get.properties
@@ -1,5 +1,5 @@
 label.title=My errands
-label.load-failed=Could not load contracts list
+label.load-failed=Could not load errands list
 label.not-record=Not records
 
 sorting.all=All
