ALF-1281 ALF-1282 ALF-1283 Механизм для работы с делегированием задач.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3409 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-delegation/repo/pom.xml
+++ b/lecm-delegation/repo/pom.xml
@@ -79,12 +79,30 @@
 			<version>${project.version}</version>
 			<scope>provided</scope>
 		</dependency>
-        <dependency>
-            <groupId>ru.it.lecm.dictionary</groupId>
-            <artifactId>dictionary-repo-api</artifactId>
-            <version>${project.version}</version>
-            <scope>provided</scope>
-        </dependency>
+		<dependency>
+			<groupId>ru.it.lecm.dictionary</groupId>
+			<artifactId>dictionary-repo-api</artifactId>
+			<version>${project.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>ru.it.lecm.calendar</groupId>
+			<artifactId>lecm-calendar-repo-api</artifactId>
+			<version>${project.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>ru.it.lecm.notifications</groupId>
+			<artifactId>notifications-repo-api</artifactId>
+			<version>${project.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>ru.it.lecm.documents</groupId>
+			<artifactId>documents-repo-api</artifactId>
+			<version>${project.version}</version>
+			<scope>provided</scope>
+		</dependency>
 
 		<!-- Don't add here amp dependencies as it will break amp packaging -->
 	</dependencies>
