ALF-1310 : Редизайн форм создания поручения : Текущая версия, без синхронизации кнопок
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3410 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-errands/share/src/main/resources/alfresco/web-extension/ru/it/lecm/errands/form.properties
+++ b/lecm-errands/share/src/main/resources/alfresco/web-extension/ru/it/lecm/errands/form.properties
@@ -15,5 +15,5 @@ label.mode-choosing.organization=In organization
 
 label.errands.attachments=Errands > Attachments
 
-label.hide-details=Hide details
-label.show-details=Show details
+label.show-details=Extended errand
+label.save-as-draft=Save draft
