ALF-1310 : Редизайн форм создания поручения : Синхронизация кнопок
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3413 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-errands/share/src/main/resources/alfresco/web-extension/ru/it/lecm/errands/form.properties
+++ b/lecm-errands/share/src/main/resources/alfresco/web-extension/ru/it/lecm/errands/form.properties
@@ -16,4 +16,4 @@ label.mode-choosing.organization=In organization
 label.errands.attachments=Errands > Attachments
 
 label.show-details=Extended errand
-label.save-as-draft=Save draft
+label.save-draft=Save draft
