[+] ALF-1179. Добавить возможность начала ЖЦ документа с разных статусов
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3419 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-statemachine-editor/share/src/main/resources/alfresco/web-extension/ru/it/lecm/statemachine-editor/editor.properties
+++ b/lecm-statemachine-editor/share/src/main/resources/alfresco/web-extension/ru/it/lecm/statemachine-editor/editor.properties
@@ -19,6 +19,7 @@ statemachine.editor.form.label.workflows=Workflows
 statemachine.editor.form.label.expressions=Expressions
 statemachine.editor.form.label.statusFields=Available Fields for editing
 statemachine.editor.form.label.attacmentCategories=Available Attachment Categories
+statemachine.editor.form.label.alternatives=Transition condition
 
 statemachine.editor.form.info=Info
 statemachine.editor.form.behavior=Behavior
