--- a/lecm-statemachine-editor/repo/src/main/config/messages/lecm-statemachine-model.properties
+++ b/lecm-statemachine-editor/repo/src/main/config/messages/lecm-statemachine-model.properties
@@ -15,6 +15,9 @@ lecm-stmeditor_model.property.lecm-stmeditor_outputFromType.title=\u0422\u0438\u
 lecm-stmeditor_model.property.lecm-stmeditor_outputFromValue.title=\u0417\u043D\u0430\u0447\u0435\u043D\u0438\u0435
 lecm-stmeditor_model.property.lecm-stmeditor_outputToType.title=\u0422\u0438\u043F
 
+lecm-stmeditor_model.property.lecm-stmeditor_alternativeExpression.title=Condition
+lecm-stmeditor_model.association.lecm-stmeditor_alternativeStatus.title=Status
+
 lecm-stmeditor_model.property.lecm-stmeditor_condition.title=Condition
 lecm-stmeditor_model.property.lecm-stmeditor_conditionErrorMessage.title=Error Message
 lecm-stmeditor_model.property.lecm-stmeditor_hideAction.title\u0421\u043A\u0440\u044B\u0432\u0430\u0442\u044C \u0434\u0435\u0439\u0441\u0442\u0432\u0438\u0435, \u0435\u0441\u043B\u0438 \u043D\u0435 \u0434\u043E\u0441\u0442\u0443\u043F\u043D\u043E
