--- a/lecm-permission-exp/repo/pom.xml
+++ b/lecm-permission-exp/repo/pom.xml
@@ -61,7 +61,7 @@
         <dependency>
             <groupId>ru.it.lecm.dictionary</groupId>
             <artifactId>dictionary-repo-api</artifactId>
-            <version>0.5.0</version>
+            <version>${project.version}</version>
             <type>jar</type>
         </dependency>
         <dependency>
