ALF-1270 : 2.2 Форма карточки поручения (основные сведения) : +контролы
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3425 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-base/share/src/main/resources/alfresco/web-extension/ru/it/lecm/base/base-share.properties
+++ b/lecm-base/share/src/main/resources/alfresco/web-extension/ru/it/lecm/base/base-share.properties
@@ -36,3 +36,5 @@ form.control.date-picker.display.time.format=HH:MM (24 Hour)
 tool.group.lecm-settings=Logic ECM settings
 label.add-file=Add file
 label.drag-file=Drag file and drop it here for adding to attachments-list or press "+"
+
+form.control.field-important = IMPORTANT!
