Дашлет "Мои поручения". [+] Данные в дашлет подгружаются динамически по мере пролистывания дашлета.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3427 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-errands/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/errands/dashlets/my-errands/my-errands.get.properties
+++ b/lecm-errands/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/errands/dashlets/my-errands/my-errands.get.properties
@@ -2,11 +2,8 @@ label.title=My errands
 label.load-failed=Could not load errands list
 label.not-record=Not records
 
-sorting.all=All
-sorting.important=Important
-sorting.overdue=Overdue
-sorting.approaching_Deadline=Approaching Deadline
-sorting.other=Other errands
+label.important=Important
+label.not-important=Not important
 
 ## Note to translators: Please retain the HTML tags in the dashlet.help message.
 dashlet.help=<p>This dashlet displays a list of "my" assignments in the form of a list representation</p>
