--- a/lecm-reports-editor/repo/src/main/config/messages/reports-editor.properties
+++ b/lecm-reports-editor/repo/src/main/config/messages/reports-editor.properties
@@ -50,6 +50,8 @@ lecm-rpeditor_model.association.lecm-rpeditor_columnTypeAssoc.title=Data Column 
 lecm-rpeditor_model.association.lecm-rpeditor_columnTypeAssoc.description=Data Column type
 lecm-rpeditor_model.association.lecm-rpeditor_columnParameterTypeAssoc.title=Data Column Parameter Type
 lecm-rpeditor_model.association.lecm-rpeditor_columnParameterTypeAssoc.description=Data Column Parameter Type
+lecm-rpeditor_model.property.lecm-rpeditor_dataColumnOrder.title=Order
+lecm-rpeditor_model.property.lecm-rpeditor_dataColumnOrder.description=Order
 
 lecm-rpeditor_model.type.lecm-rpeditor_reportDescriptor.title=Report Descriptor
 lecm-rpeditor_model.type.lecm-rpeditor_reportDescriptor.description=Report Descriptor
