[+]страница с Отчетами для поручений
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3432 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-errands/share/src/main/resources/alfresco/web-extension/ru/it/lecm/errands/form.properties
+++ b/lecm-errands/share/src/main/resources/alfresco/web-extension/ru/it/lecm/errands/form.properties
@@ -17,3 +17,5 @@ label.errands.attachments=Errands > Attachments
 
 label.show-details=Extended errand
 label.save-draft=Save draft
+
+page.errands-reports=Errands Reports
