Обновил классы для работы с BR5, сделал загрузку документа Lecm, сделал отображение экспертов по документу.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3447 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-semantic-assist/share/src/main/resources/alfresco/web-extension/ru/it/lecm/br5/semantic/form.properties
+++ b/lecm-semantic-assist/share/src/main/resources/alfresco/web-extension/ru/it/lecm/br5/semantic/form.properties
@@ -3,3 +3,5 @@ page.semantic.theme.cloud.title=Theme cloud for document
 page.semantic.theme.cloud.description=Theme cloud for document
 page.semantic.document.term.title=Documents by tag
 page.semantic.document.term.description=Documents by tag
+page.semantic.experts.document.title=Experts by document
+page.semantic.experts.document.description=Experts by document
