--- a/lecm-documents/api/pom.xml
+++ b/lecm-documents/api/pom.xml
@@ -81,6 +81,11 @@
             <artifactId>business-journal-repo-api</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>ru.it.lecm.orgstructure</groupId>
+            <artifactId>orgstructure-repo-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
         <!-- Don't add here amp dependencies as it will break amp packaging -->
     </dependencies>
     <!--
