[~] ALF-1318. Изменения в форме конфигурирования обработчиков событий
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3463 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-statemachine-editor/repo/src/main/config/messages/lecm-statemachine-model.properties
+++ b/lecm-statemachine-editor/repo/src/main/config/messages/lecm-statemachine-model.properties
@@ -58,7 +58,7 @@ lecm-stmeditor_model.property.lecm-stmeditor_endScriptAction.title=Script execut
 lecm-stmeditor_model.property.lecm-stmeditor_endEventScriptAction.title=Script execution on state finish
 lecm-stmeditor_model.property.lecm-stmeditor_startTimerAction.title=Time-out
 
-lecm-stmeditor_model.property.lecm-stmeditor_scriptLabel.title=Title
+lecm-stmeditor_model.property.lecm-stmeditor_scriptLabel.title=Description
 lecm-stmeditor_model.property.lecm-stmeditor_actionScript.title=Script
 
 
