--- a/lecm-errands/repo/pom.xml
+++ b/lecm-errands/repo/pom.xml
@@ -89,6 +89,15 @@
 		    <artifactId>lecm-security-api</artifactId>
 		    <version>${project.version}</version>
 	    </dependency>
+        <dependency>
+            <groupId>ru.it.lecm.notifications</groupId>
+            <artifactId>notifications-repo-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.quartz-scheduler</groupId>
+            <artifactId>quartz</artifactId>
+        </dependency>
         <!-- Don't add here amp dependencies as it will break amp packaging -->
     </dependencies>
     <!--
