--- a/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components/header/document.header.get.properties
+++ b/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components/header/document.header.get.properties
@@ -3,3 +3,5 @@ button.transfer.right=Transfer of
 label.transfer.edit.title=Transfer of
 message.transfer.edit.success=transfer is good
 message.transfer.edit.failure=failure transfer of document
+button.add.favourite=Add to favorite
+button.remove.favourite=Remove from favorite
