[+]фильтр для Поручений
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3469 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-errands/repo/pom.xml
+++ b/lecm-errands/repo/pom.xml
@@ -98,6 +98,11 @@
             <groupId>org.quartz-scheduler</groupId>
             <artifactId>quartz</artifactId>
         </dependency>
+        <dependency>
+            <groupId>ru.it.lecm.calendar</groupId>
+            <artifactId>lecm-calendar-repo-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
         <!-- Don't add here amp dependencies as it will break amp packaging -->
     </dependencies>
     <!--
