--- a/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components/tasks/dashlet/my-tasks.get.properties
+++ b/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components/tasks/dashlet/my-tasks.get.properties
@@ -1,8 +1,18 @@
-label.title=My tasks
+label.title=Control Center
+label.create-row.title=Add Errand
+
 dashlet.help=<p>Dashlet "My tasks" is designed to...</p>
 dashlet.help.tooltip=Show help
 dashlet.expand.tooltip=Expand
 dashlet.tasks.count=Total count
+dashlet.add.errand=Add Errand
+dashlet.add.errand.tooltip=Add New Errand
 
 empty.title=Review the tasks assigned to you
 empty.description=Different types of tasks can appear in this task list and you need to address each one.
+
+dashlet.my.tasks.assigned.count={0} tasks assigned on me
+dashlet.my.errands.assigned.count={0} errands assigned on me
+dashlet.my.errands.assigned.by.me.count={0} errands assigned by me
+dashlet.label.last.task=The last
+dashlet.label.last.errand=The last
