--- a/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components/tasks/list/tasks.list.get.properties
+++ b/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components/tasks/list/tasks.list.get.properties
@@ -1,4 +1,3 @@
-tasklist.label.display=Display
 tasklist.label.mytasks=My Tasks
 tasklist.label.subordinatestasks=Subordinates Tasks
 tasklist.label.status=Status
@@ -7,3 +6,7 @@ tasklist.label.duedate=Due Date
 tasklist.option.all=All
 tasklist.option.active=Active
 tasklist.option.completed=Completed
+
+WORKFLOWTASKTYPE_NA=NA
+WORKFLOWTASKTYPE_OVERDUE=OVERDUE
+WORKFLOWTASKTYPE_SOON=SOON
