--- a/lecm-errands/repo/src/main/config/messages/lecm-errands-model.properties
+++ b/lecm-errands/repo/src/main/config/messages/lecm-errands-model.properties
@@ -30,6 +30,8 @@ lecm-errands_model.property.lecm-errands_is-expired.title=Is expired
 lecm-errands_model.property.lecm-errands_is-expired.description=Is expired
 lecm-errands_model.property.lecm-errands_is-short.title=Is short
 lecm-errands_model.property.lecm-errands_is-short.description=Is short
+lecm-errands_model.property.lecm-errands_base-doc-number.title=Base Doc Number
+lecm-errands_model.property.lecm-errands_base-doc-number.description=Base Doc Number
 
 lecm-errands_model.association.lecm-errands_initiator-assoc.title=Initiator
 lecm-errands_model.association.lecm-errands_initiator-assoc.description=Initiator
