вынес зависимости от apache-cxf в платформу target ignore
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3508 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-signed-docflow/client/pom.xml
+++ b/lecm-signed-docflow/client/pom.xml
@@ -18,6 +18,14 @@
 			<groupId>org.alfresco</groupId>
 			<artifactId>alfresco-data-model</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.cxf</groupId>
+			<artifactId>cxf-rt-databinding-xmlbeans</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.cxf</groupId>
+			<artifactId>cxf-rt-frontend-jaxws</artifactId>
+		</dependency>
 	</dependencies>
 
 </project>
