[~]ALF-1237 8.1 Создание копии поручений
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3510 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components/header/document.header.get.properties
+++ b/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components/header/document.header.get.properties
@@ -5,3 +5,5 @@ message.transfer.edit.success=transfer is good
 message.transfer.edit.failure=failure transfer of document
 button.add.favourite=Add to favorite
 button.remove.favourite=Remove from favorite
+button.copy=Copy
+message.duplicate.failure=Copying failure
