--- a/server/alfresco/pom.xml
+++ b/server/alfresco/pom.xml
@@ -291,13 +291,20 @@
             <scope>runtime</scope>
             <type>amp</type>
         </dependency>
-		<dependency>
-		 <groupId>ru.it.lecm.scaner</groupId>
-		 <artifactId>scaner-repo</artifactId>
-		 <version>${platform.version}</version>
-			 <type>amp</type>
-			   <scope>runtime</scope>
+        <dependency>
+            <groupId>ru.it.lecm.scaner</groupId>
+            <artifactId>scaner-repo</artifactId>
+            <version>${platform.version}</version>
+            <type>amp</type>
+            <scope>runtime</scope>
 		</dependency>
+        <dependency>
+            <groupId>ru.it.lecm.signed-docflow</groupId>
+            <artifactId>signed-docflow-repo</artifactId>
+            <version>${platform.version}</version>
+            <type>amp</type>
+            <scope>runtime</scope>
+        </dependency>
 		<dependency>
             <groupId>ru.it.lecm.br5.semantic</groupId>
             <artifactId>semantic-assist-repo</artifactId>
