ALF-1219: Запросить отмену поручения.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3513 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-errands/repo/src/main/config/messages/lecm-errands-workflow.properties
+++ b/lecm-errands/repo/src/main/config/messages/lecm-errands-workflow.properties
@@ -12,3 +12,6 @@ lecmErrandWf_model.property.lecmErrandWf_changeRequestedDueDateReason.descriptio
 
 lecmErrandWf_model.property.lecmErrandWf_changeRequestedDueDateComment.title=Comment
 lecmErrandWf_model.property.lecmErrandWf_changeRequestedDueDateComment.description=Comment
+
+lecmErrandWf_model.property.lecmErrandWf_requestCancelReason.title=Cancel reason
+lecmErrandWf_model.property.lecmErrandWf_requestCancelReason.description=Cancel reason
