--- a/pom.xml
+++ b/pom.xml
@@ -326,6 +326,11 @@
 				<artifactId>cxf-rt-databinding-jaxb</artifactId>
 				<version>${apache.cxf.version}</version>
 			</dependency>
+			<dependency>
+				<groupId>org.apache.cxf</groupId>
+				<artifactId>cxf-rt-transports-http</artifactId>
+				<version>${apache.cxf.version}</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
