--- a/lecm-semantic-assist/repo/pom.xml
+++ b/lecm-semantic-assist/repo/pom.xml
@@ -75,6 +75,10 @@
 			<artifactId>cxf-rt-frontend-jaxws</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.cxf</groupId>
+			<artifactId>cxf-rt-transports-http</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>ru.it.lecm.orgstructure</groupId>
 			<artifactId>orgstructure-repo-api</artifactId>
 			<version>${project.version}</version>
