--- a/lecm-signed-docflow/repo/pom.xml
+++ b/lecm-signed-docflow/repo/pom.xml
@@ -31,9 +31,23 @@
 			<artifactId>spring-beans</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.alfresco</groupId>
+			<artifactId>alfresco-data-model</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.extensions.surf</groupId>
+			<artifactId>spring-surf</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>ru.it.lecm.signed-docflow</groupId>
 			<artifactId>signed-docflow-api</artifactId>
 			<version>${platform.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>ru.it.lecm.base</groupId>
+			<artifactId>base-repo-api</artifactId>
+			<version>${platform.version}</version>
+			<scope>provided</scope>
 		</dependency>
 		<!-- Don't add here amp dependencies as it will break amp packaging -->
 	</dependencies>
@@ -79,10 +93,10 @@
 				</excludes>
 			</resource>
 			<!--
-			   Copies and filters AMP config in the proper package
-			   'alfresco/module/${project.artifactId}' so to enforce full module
-			   naming single sourcing from POM properties
-			 -->
+			  Copies and filters AMP config in the proper package
+			  'alfresco/module/${project.artifactId}' so to enforce full module
+			  naming single sourcing from POM properties
+			-->
 			<resource>
 				<filtering>true</filtering>
 				<directory>src/main/config</directory>
