git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3529 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,7 @@
 		<module>lecm-theme</module>
 		<module>lecm-delegation</module>
 		<module>lecm-subscriptions</module>
+		<module>lecm-model-editor</module>
 		<module>lecm-notifications</module>
 		<module>lecm-notifications-email</module>
 		<module>lecm-notifications-dashlet</module>
