--- a/lecm-signed-docflow/repo/pom.xml
+++ b/lecm-signed-docflow/repo/pom.xml
@@ -49,7 +49,15 @@
 			<version>${platform.version}</version>
 			<scope>provided</scope>
 		</dependency>
-		<!-- Don't add here amp dependencies as it will break amp packaging -->
+		<dependency>
+			<groupId>ru.it.lecm.signed-docflow</groupId>
+			<artifactId>signed-docflow-unicloud-client</artifactId>
+			<version>${platform.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+		</dependency>
 	</dependencies>
 	<!--
 	   The scm is required for the buildnumber-maven-plugin which is required
