--- a/lecm-errands/repo/src/main/config/messages/lecm-errands-workflow.properties
+++ b/lecm-errands/repo/src/main/config/messages/lecm-errands-workflow.properties
@@ -15,3 +15,8 @@ lecmErrandWf_model.property.lecmErrandWf_changeRequestedDueDateComment.descripti
 
 lecmErrandWf_model.property.lecmErrandWf_requestCancelReason.title=Cancel reason
 lecmErrandWf_model.property.lecmErrandWf_requestCancelReason.description=Cancel reason
+listconstraint.lecmErrandWf_requestCancelTaskResultConstraint.REJECTED=Reject
+listconstraint.lecmErrandWf_requestCancelTaskResultConstraint.CANCEL_ERRAND=Cancel errand
+listconstraint.lecmErrandWf_requestCancelTaskResultConstraint.CHANGE_EXECUTOR=Change executor
+lecmErrandWf_model.property.lecmErrandWf_requestCancelTaskReason.title=Cancel reason
+lecmErrandWf_model.association.lecmErrandWf_requestCancelTaskNewExecutor.title=New executor
