[+] Подключение model-editor
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3533 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/server/share/pom.xml
+++ b/server/share/pom.xml
@@ -249,13 +249,20 @@
             <scope>runtime</scope>
             <type>amp</type>
         </dependency>
-	 <dependency>
-	  <groupId>ru.it.lecm.permission-exp</groupId>
-	  <artifactId>permission-exp-share</artifactId>
-	  <version>${platform.version}</version>
+        <dependency>
+            <groupId>ru.it.lecm.permission-exp</groupId>
+            <artifactId>permission-exp-share</artifactId>
+            <version>${platform.version}</version>
             <scope>runtime</scope>
             <type>amp</type>
-	 </dependency>
+        </dependency>
+        <dependency>
+            <groupId>ru.it.lecm.model-editor</groupId>
+            <artifactId>model-editor-share</artifactId>
+            <version>${platform.version}</version>
+            <type>amp</type>
+            <scope>runtime</scope>
+        </dependency>
 	</dependencies>
 
 	<build>
