--- a/server/alfresco/pom.xml
+++ b/server/alfresco/pom.xml
@@ -312,14 +312,21 @@
             <scope>runtime</scope>
             <type>amp</type>
         </dependency>
-	 <dependency>
-	  <groupId>ru.it.lecm.permission-exp</groupId>
-	  <artifactId>permission-exp-repo</artifactId>
-	  <version>${platform.version}</version>
-          <scope>runtime</scope>
+        <dependency>
+            <groupId>ru.it.lecm.permission-exp</groupId>
+            <artifactId>permission-exp-repo</artifactId>
+            <version>${platform.version}</version>
+            <scope>runtime</scope>
             <type>amp</type>
-	 </dependency>
-	</dependencies>
+        </dependency>
+        <dependency>
+            <groupId>ru.it.lecm.model-editor</groupId>
+            <artifactId>model-editor-repo</artifactId>
+            <version>${platform.version}</version>
+            <scope>runtime</scope>
+            <type>amp</type>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<finalName>${webapp.name}</finalName>
