ALF-1246 Переработать секцию "Задачи" Базового документа в соответствии с пунктом 5.6.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3541 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components/tasks/list/my-errands.list.get.properties
+++ b/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components/tasks/list/my-errands.list.get.properties
@@ -1,6 +1,10 @@
 errandslist.label.my.errands=My Errands
 errandslist.label.status=Status
 errandslist.label.duedate=Due Date
+errandslist.label.after=AFTER
+errandslist.label.new=NEW
+errandslist.label.overdue=OVERDUE
+errandslist.label.important=Important
 
 errandslist.option.all=All
 errandslist.option.active=Active
