ALF-1246, ALF-1245 [~] Подправлена фильтрация поручений. [+] Добавлен переход из дашлета к нужному якорю при разворачивании списка
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3560 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components/tasks/list/errands.list.get.properties
+++ b/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components/tasks/list/errands.list.get.properties
@@ -1,5 +1,5 @@
-errandslist.label.my.errands=My Errands
-errandslist.label.issued.by.me=Errands Issued by Me
+errandslist.label.my-errands=My Errands
+errandslist.label.issued-by-me=Errands Issued by Me
 errandslist.label.status=Status
 errandslist.label.duedate=Due Date
 errandslist.label.after=AFTER
