Доделал страницы, которые отображают облако тегов документа, эксперта; страницу с похожими документами; страницу с экспертами, которые наиболее соответсвуют документу. Сделал переходы между этими страницами. На дашлеты основные сведения, участники, а также в меню метки добавлены кнопки для отображения соотвествующих страниц. Добавлена кнопка на карточку эксперта для перехода на страницу с термами эксперта.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3562 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-semantic-assist/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/br5/semantic/components/semantic-panel/semantic-panel.get.properties
+++ b/lecm-semantic-assist/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/br5/semantic/components/semantic-panel/semantic-panel.get.properties
@@ -2,3 +2,5 @@ heading=Semantic Assist
 cloud.text=Theme cloud
 experts.theme.text=Experts by themes
 similar.document.text=Similar documents
+title.experts.by.document=Experts by document
+title.documents.by.document=Similar documents
