--- a/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components/tags/document.tags.get.properties
+++ b/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components/tags/document.tags.get.properties
@@ -2,3 +2,5 @@ document.tags=Tags
 document.tip.insitu-tag=Edit tags
 document.insitu-edit.tag.failure=Tags error
 validation-hint.tagName=The characters * \ < > ? / : | are not allowed. The name cannot end with a dot.
+label.expand=Expand
+label.terms.document.cloud= Document term's cloud
