--- a/lecm-signed-docflow/client/pom.xml
+++ b/lecm-signed-docflow/client/pom.xml
@@ -49,13 +49,12 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
-			<version>1.7.5</version>
+			<version>${slf4j.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-			<version>1.7.5</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -73,7 +72,6 @@
 		<dependency>
 			<groupId>commons-codec</groupId>
 			<artifactId>commons-codec</artifactId>
-			<version>1.8</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
