ALF-1245, ALF-1246 [~] подправлен поиск поручений [~] в список поручений добавлен вывод исполнителя и инициатора
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3576 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components/tasks/list/errands.list.get.properties
+++ b/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components/tasks/list/errands.list.get.properties
@@ -6,6 +6,8 @@ errandslist.label.after=AFTER
 errandslist.label.new=NEW
 errandslist.label.overdue=OVERDUE
 errandslist.label.important=Important
+errandslist.label.executor=Executor
+errandslist.label.initiator=Initiator
 
 errandslist.option.all=All
 errandslist.option.active=Active
