На форме подписи стантарного контена убрана галка "На подпись": для навешивания необходимого аспекта есть стандартные средства.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3577 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-signed-docflow/repo/src/main/config/messages/signed-docflow.properties
+++ b/lecm-signed-docflow/repo/src/main/config/messages/signed-docflow.properties
@@ -1,2 +1,3 @@
 lecm-signed-docflow_signed-docflow.property.lecm-signed-docflow_operator-code.title=Spec. operator code
 lecm-signed-docflow_signed-docflow.property.lecm-signed-docflow_partner-key.title=Partner ID
+lecm-signed-docflow_signed-docflow.aspect.lecm-signed-docflow_signable.title=Signable
