--- a/lecm-errands/repo/src/main/config/messages/lecm-errands-workflow.properties
+++ b/lecm-errands/repo/src/main/config/messages/lecm-errands-workflow.properties
@@ -1,17 +1,15 @@
 lecmErrandWf_model.property.lecmErrandWf_requestDueDateChangeNewDate.title=Requested Due-Date
 lecmErrandWf_model.property.lecmErrandWf_requestDueDateChangeNewDate.description=Requested Due-Date
-
 lecmErrandWf_model.property.lecmErrandWf_requestDueDateChangeReason.title=Request Due-Date Change Reason
 lecmErrandWf_model.property.lecmErrandWf_requestDueDateChangeReason.description=Request Due-Date Change Reason
-
-lecmErrandWf_model.property.lecmErrandWf_changeRequestedDueDateNewDate.title=Requested Due-Date
-lecmErrandWf_model.property.lecmErrandWf_changeRequestedDueDateNewDate.description=Requested Due-Date
-
-lecmErrandWf_model.property.lecmErrandWf_changeRequestedDueDateReason.title=Request Due-Date Change Reason
-lecmErrandWf_model.property.lecmErrandWf_changeRequestedDueDateReason.description=Request Due-Date Change Reason
-
-lecmErrandWf_model.property.lecmErrandWf_changeRequestedDueDateComment.title=Comment
-lecmErrandWf_model.property.lecmErrandWf_changeRequestedDueDateComment.description=Comment
+lecmErrandWf_model.property.lecmErrandWf_requestDueDateChangeTaskNewDate.title=Requested Due-Date
+lecmErrandWf_model.property.lecmErrandWf_requestDueDateChangeTaskNewDate.description=Requested Due-Date
+lecmErrandWf_model.property.lecmErrandWf_requestDueDateChangeTaskDateReason.title=Request Due-Date Change Reason
+lecmErrandWf_model.property.lecmErrandWf_requestDueDateChangeTaskDateReason.description=Request Due-Date Change Reason
+lecmErrandWf_model.property.lecmErrandWf_requestDueDateChangeTaskComment.title=Comment
+lecmErrandWf_model.property.lecmErrandWf_requestDueDateChangeTaskComment.description=Comment
+listconstraint.lecmErrandWf_requestDueDateChangeTaskResultConstraint.APPROVED=Approve
+listconstraint.lecmErrandWf_requestDueDateChangeTaskResultConstraint.REJECTED=Reject
 
 lecmErrandWf_model.property.lecmErrandWf_requestCancelReason.title=Cancel reason
 lecmErrandWf_model.property.lecmErrandWf_requestCancelReason.description=Cancel reason
