ALF-1390 Доработать дашлет "Выданные мной поручения"
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3582 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-errands/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/errands/dashlets/issued-by-me-errands/issued-by-me-errands.get.properties
+++ b/lecm-errands/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/errands/dashlets/issued-by-me-errands/issued-by-me-errands.get.properties
@@ -6,7 +6,7 @@ label.important=Important
 
 ## Note to translators: Please retain the HTML tags in the dashlet.help message.
 dashlet.help=<p>This dashlet displays a list of "issued by me" assignments in the form of a list representation</p>
-
+dashlet.arm.tooltip=ARM
 
 label.info.allErrands=All
 label.info.expiredErrands=Expired
