ALF-1222: Сменить исполнителя
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3588 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-errands/repo/src/main/config/messages/lecm-errands-workflow.properties
+++ b/lecm-errands/repo/src/main/config/messages/lecm-errands-workflow.properties
@@ -18,3 +18,7 @@ listconstraint.lecmErrandWf_requestCancelTaskResultConstraint.CANCEL_ERRAND=Canc
 listconstraint.lecmErrandWf_requestCancelTaskResultConstraint.CHANGE_EXECUTOR=Change executor
 lecmErrandWf_model.property.lecmErrandWf_requestCancelTaskReason.title=Cancel reason
 lecmErrandWf_model.association.lecmErrandWf_requestCancelTaskNewExecutor.title=New executor
+
+lecmErrandWf_model.property.lecmErrandWf_changeExecutorReason.title=Change executor reason
+lecmErrandWf_model.association.lecmErrandWf_changeExecutorCurrentExecutor.title=Current executor
+lecmErrandWf_model.association.lecmErrandWf_changeExecutorNewExecutor.title=New executor
