Модуль Signed docflow share добавлен в сборку.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3593 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/server/share/pom.xml
+++ b/server/share/pom.xml
@@ -236,12 +236,19 @@
             <type>amp</type>
         </dependency>
 		<dependency>
-		 <groupId>ru.it.lecm.scaner</groupId>
-		 <artifactId>scaner-share</artifactId>
-		 <version>${platform.version}</version>
-			 <type>amp</type>
-			   <scope>runtime</scope>
+			<groupId>ru.it.lecm.scaner</groupId>
+			<artifactId>scaner-share</artifactId>
+			<version>${platform.version}</version>
+			<type>amp</type>
+			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>ru.it.lecm.signed-docflow</groupId>
+			<artifactId>signed-docflow-share</artifactId>
+            <version>${platform.version}</version>
+            <type>amp</type>
+            <scope>runtime</scope>
+        </dependency>
 		<dependency>
             <groupId>ru.it.lecm.br5.semantic</groupId>
             <artifactId>semantic-assist-share</artifactId>
