--- a/lecm-dictionary/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/dictionary/datagrid/datagrid.get.properties
+++ b/lecm-dictionary/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/dictionary/datagrid/datagrid.get.properties
@@ -49,3 +49,12 @@ label.keywords=Keywords
 logicecm.dictionary.view=View
 
 message.export.csv.failure=Export csv failure
+
+message.restore.success=Item was restored
+message.restore.failure=Could not restore item
+message.confirm.restore.title=Restore Item
+message.confirm.restore.description=Are you sure you want to restore this item?
+message.confirm.restore.group.description=Are you sure you want to restore items?
+button.restore=Restore
+actions.restore-row=Delete
+
