ALF-1376 Дизайн формы "задачи и поручения" при отсутствии задач или поручений в соответствующей секции [~] При отсутствии задач выводится строчка с сообщением "нет задач" для задач и "нет поручений" для поручений.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3599 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components/tasks/list/errands.list.get.properties
+++ b/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components/tasks/list/errands.list.get.properties
@@ -8,6 +8,7 @@ errandslist.label.overdue=OVERDUE
 errandslist.label.important=Important
 errandslist.label.executor=Executor
 errandslist.label.initiator=Initiator
+errandslist.label.no-errands=no errands
 
 errandslist.option.all=All
 errandslist.option.active=Active
