--- a/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components/tasks/list/tasks.list.get.properties
+++ b/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components/tasks/list/tasks.list.get.properties
@@ -2,6 +2,7 @@ tasklist.label.mytasks=My Tasks
 tasklist.label.subordinatestasks=Subordinates Tasks
 tasklist.label.status=Status
 tasklist.label.duedate=Due Date
+tasklist.label.no-tasks=No tasks
 
 tasklist.option.all=All
 tasklist.option.active=Active
