--- a/lecm-errands/share/src/main/resources/alfresco/web-extension/ru/it/lecm/errands/form.properties
+++ b/lecm-errands/share/src/main/resources/alfresco/web-extension/ru/it/lecm/errands/form.properties
@@ -21,3 +21,5 @@ label.save-draft=Save draft
 page.errands-reports=Errands Reports
 
 errands.number=Number
+
+field.changeExecutorCurrentExecutor.title=Current executor
