[ALF-1336] Добавлена форма выбора сертификата [ALF-1335] Реализовано подписание вложения (клиентская часть).
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3607 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-signed-docflow/repo/src/main/config/messages/signed-docflow.properties
+++ b/lecm-signed-docflow/repo/src/main/config/messages/signed-docflow.properties
@@ -1,3 +1,6 @@
 lecm-signed-docflow_signed-docflow.property.lecm-signed-docflow_operator-code.title=Spec. operator code
 lecm-signed-docflow_signed-docflow.property.lecm-signed-docflow_partner-key.title=Partner ID
 lecm-signed-docflow_signed-docflow.aspect.lecm-signed-docflow_signable.title=Signable
+lecm-signed-docflow_signed-docflow.property.lecm-signed-docflow_applet-key.title=Crypto-applet license key
+lecm-signed-docflow_signed-docflow.property.lecm-signed-docflow_applet-cert.title=Crypto-applet cert
+lecm-signed-docflow_signed-docflow.property.lecm-signed-docflow_applet-container.title=Crypto-applet cert container
