ALF-1223: Отменить поручение
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3615 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-errands/repo/src/main/config/messages/lecm-errands-workflow.properties
+++ b/lecm-errands/repo/src/main/config/messages/lecm-errands-workflow.properties
@@ -21,3 +21,5 @@ lecmErrandWf_model.association.lecmErrandWf_requestCancelTaskNewExecutor.title=N
 
 lecmErrandWf_model.property.lecmErrandWf_changeExecutorReason.title=Change executor reason
 lecmErrandWf_model.association.lecmErrandWf_changeExecutorNewExecutor.title=New executor
+
+lecmErrandWf_model.property.lecmErrandWf_cancelReason.title=Cancel reason
